micros, api updates, personas fixes
